force-app/main/default/objects/SMS_Order__c/SMS_Order__c.object-meta.xml
<CustomObject>
    <label>SMS_Order</label>
    <nameField>
        <label>SMS_Order Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS_Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>