force-app/main/default/objects/SMS_Order__c/fields/Bypass_Payment__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Payment</label>
    <type>Checkbox</type>
</CustomField>