force-app/main/default/objects/SMS_Order__c/fields/IsEzJoinApplication__c.field-meta.xml
<CustomField>
    <fullName>IsEzJoinApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field value is set to true only when the reinstatement is happening from another system (like EZJoin) apart from Salesforce</description>
    <label>IsEzJoinApplication</label>
    <type>Checkbox</type>
</CustomField>