force-app/main/default/objects/SMS_Order__c/fields/MRIS_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>MRIS_Subscription_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRIS Subscription Id</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>SMS_Order</relationshipLabel>
    <relationshipName>SMS_Order</relationshipName>
    <type>Lookup</type>
</CustomField>