force-app/main/default/objects/SMS_Order__c/fields/Service_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Service_Jurisdiction__c</fullName>
    <formula>TEXT(MRIS_Subscription_Id__r.Service_Jurisdiction__c)</formula>
    <label>Service Jurisdiction</label>
    <type>Text</type>
</CustomField>