force-app/main/default/objects/SMS_Order__c/fields/Zuora_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Account_Id__c</fullName>
    <label>Zuora Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>