force-app/main/default/objects/SMS_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Amount_Collected__c</columns>
    <columns>Token__c</columns>
    <columns>Status__c</columns>
    <columns>Zuora_Account_Id__c</columns>
    <columns>IsEzJoinApplication__c</columns>
    <columns>Bypass_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>